fixed book covers not aligning properly

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
 	background-color: #fff;
 }
 
-
 a {
 	color: #24a7ff;
 	text-decoration: none;
@@ -63,8 +62,8 @@ a:hover {
 }
 
 .book-cover {
-	width: 420px;
-	margin: 0 auto;
+	width: 100%;
+  height: auto;
 }
 
 
